# elections

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  add_urls.py  check-assignments.csv  combine_sections.py  compare_assignments.py  fix_assignments.py  generate_mediamtx_config.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  result_122400005.0.json  result_122900056.0.json  update_streams.py  validation_report.csv
data/: _obsolete_geocode_locations.py  backfill_settlement_name.py  build_protocol_urls.py  cik_reference.json  cleanup_geocode.py  fix_mi2023_votes.py  fix_orphan_ballots.py  geocode_cache.json  geocode_google.py  geocode_photon.py  link_geography.py  migrate_schema.py  normalize_candidates_schema.py  normalize_sections.py  override_section_addresses.py  party-metadata.json  score_sections.py  scrape_all_protocols.sh  scrape_cik_addresses.py  scrape_mi2023_reference.py  validate_geocode.py
discovery/: README.md  package.json
election-data-validator/: __init__.py  __main__.py  cli.py  loader.py  reporter.py  test_cli.py  test_loader.py  test_loader_protocols.py  test_property_ballot_balance.py  test_property_cross_ref.py  test_property_form_type.py  test_property_preferences.py  test_property_protocol.py  test_property_referential.py  test_property_sanity.py  (+4 more)
protocols/backend/: .gitignore  README.md  pyproject.toml
protocols/backend/election-protocol-experiments/: README.md  pyproject.toml
protocols/backend/election-protocol-experiments/src/: models.py
protocols/backend/election-protocol-experiments/tests/: test_models.py
protocols/backend/election-protocols-be/: Dockerfile  README.md  pyproject.toml
protocols/backend/election-protocols-be/src/election_protocols_be/: main.py
protocols/backend/election-protocols-be/src/election_protocols_be/models/: __init__.py  protocol.py  response.py
protocols/backend/election-protocols-be/src/election_protocols_be/routers/v1/: protocol_router.py
protocols/backend/election-protocols-be/src/election_protocols_be/services/: protocol_service.py
protocols/backend/election-protocols-be/src/election_protocols_be/utils/: settings.py
protocols/backend/election-protocols-be/tests/: conftest.py  test_main.py  test_models.py  test_protocol_router.py  test_protocol_service.py
protocols/backend/election-protocols-experiments/: README.md  compare_results.py  ocr_chandra_pagepage_reason_gemini.py  ocr_gemini_tests.ipynb  ocr_gemini_tests.py  ocr_reason_gemini.py  pyproject.toml
protocols/backend/election-protocols-experiments/src/election_protocols_experiments/: pdf_to_html.py  pdf_to_html_v2.py
protocols/backend/election-protocols-experiments/tests/: test_models.py
(+410 files in other folders)
