[project]
name = "protocols"
dynamic = ["version"]
requires-python = ">=3.14"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0"

[tool.uv]
# don't package the project because we package the services and libs separately
package = false

[tool.uv.workspace]
members = ["*"]

[tool.pytest.ini_options]
testpaths = ["*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov",
    "--cov-report=term-missing",
    "--cov-branch",
]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]

[tool.coverage.run]
source = [
    "election-protocols-be/src/elections_protocols_be",
    "election-protocols-experiments/src/elections_protocols_experiments",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
# E/W: pycodestyle errors/warnings
# F: pyflakes
# I: isort
# B: flake8-bugbear
# UP: pyupgrade

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
