[project]
name = "election-protocols-experiments"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel",
    "ipywidgets"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/election_protocols_experiments"]
