[project]
name = "election-protocols-experiments"
version = "1.0.0"
requires-python = ">=3.14"
dependencies = [
    "ipykernel",
    "ipywidgets",
    "pydantic>=2.0"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
sources = ["src"]
